manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tagger
  namespace: tagger
  labels:
    app: tagger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tagger
  template:
    metadata:
      labels:
        app: tagger
    spec:
      serviceAccountName: tagger
      containers:
      - name: tagger
        image: quay.io/rmarasch/tagger:latest
        volumeMounts:
          - mountPath: "/assets"
            name: certs
            readOnly: true
        ports:
        - containerPort: 8080
      volumes:
      - name: certs
        secret:
          secretName: certs
