manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webhooks
  namespace: tagger
spec:
  selector:
    app: tagger
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
