manifests/004_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: tagger
webhooks:
- name: core.images.io
  admissionReviewVersions:
  - v1
  sideEffects: None
  clientConfig:
    service:
      name: webhooks
      namespace: tagger
      path: "/deploy"
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURtVENDQW9HZ0F3SUJBZ0lVY1k0bHh2Wkc1
[...]
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - "v1"
    resources: 
    - pods
    operations: 
    - CREATE
  - apiGroups:
    - "apps"
    apiVersions:
    - "v1"
    resources: 
    - deployments
    operations: 
    - CREATE
- name: tag.images.io
  admissionReviewVersions:
  - v1
  sideEffects: None
  clientConfig:
    service:
      name: webhooks
      namespace: tagger
      path: "/tag"
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURtVENDQW9HZ0F3SUJBZ0lVY1k0bHh2Wkc1
[...]
  rules:
  - apiGroups:
    - "images.io"
    apiVersions:
    - "v1"
    resources: 
    - tags
    operations: 
    - CREATE
    - UPDATE
