manifests/04_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: tagger
webhooks:
- name: tag.images.io
  admissionReviewVersions:
  - v1
  sideEffects: None
  clientConfig:
    service:
      name: mutating-webhooks
      namespace: tagger
      path: "/tag"
      port: 8080
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURzakNDQXBxZ0F3SUJBZ0lVZEpWWTBPNDB2
[...]
      SmRvPQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0tCg==
  rules:
  - apiGroups:
    - "images.io"
    apiVersions:
    - "v1beta1"
    resources: 
    - tags
    operations: 
    - CREATE
    - UPDATE
