manifests/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: image-tag-injector
webhooks:
- name: core.images.io
  admissionReviewVersions:
  - v1
  sideEffects: None
  clientConfig:
    url: https://gateway:8080/deploy
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURzVENDQXBtZ0F3SUJBZ0lVUDJHcUJSbnF3
[...]
      aFE9PQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0tCg==
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - "v1"
    resources: 
    - pods
    operations: 
    - CREATE
  - apiGroups:
    - "apps"
    apiVersions:
    - "v1"
    resources: 
    - deployments
    operations: 
    - CREATE
- name: tag.images.io
  admissionReviewVersions:
  - v1
  sideEffects: None
  clientConfig:
    url: https://gateway:8080/tag
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURzVENDQXBtZ0F3SUJBZ0lVUDJHcUJSbnF3
[...]
      aFE9PQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0tCg==
  rules:
  - apiGroups:
    - "images.io"
    apiVersions:
    - "v1"
    resources: 
    - tags
    operations: 
    - CREATE
    - UPDATE
